--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
                         <div>CSS</div>
                         <div>JS</div>
                         <div>React</div>
+                        <div>API</div>
                     </div>
                     <p>Aplicación para que pongas a prueba tu Inglés. Varias funcionalidades, y opción de crear tu
                         propia
                         lista.</p>
                 </div>
             </div>
+            
         </div>
     </section>
     <hr>
