--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
     <!--PORTADA-->
     <section id="portada">
-        <h1>Bienvenidos</h1>
-        <p>
-            Por el momento soy Front End Developer, aunque sigo aprendiendo, y mejorando mis Habilidades.
-        </p>
+        <div>
+            <h1>Bienvenidos</h1>
+            <h3>I'm <span>Ulises</span></h3>
+            <p>
+                Por el momento soy Front End Developer, aunque sigo aprendiendo, y mejorando mis Habilidades.
+            </p>
+        </div>
     </section>
-  
+    <hr>
     <!--PROJECT-->
     <section id="projects">
         <h1>Projects</h1>
@@ -60,7 +63,8 @@
                         </div>
                         <div class="description-div-2">
                             <ul>
-                                <li><a href="https://github.com/Ulisesx21/Verbos-Ingles" target="_blank"><i class=" fab fa-github"></i></i></a></li>
+                                <li><a href="https://github.com/Ulisesx21/Verbos-Ingles" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -75,7 +79,7 @@
                         lista.</p>
                 </div>
             </div>
-            
+
         </div>
     </section>
     <hr>
