--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="portada">
         <div>
             <h1>Bienvenidos</h1>
-            <h3>I'm <span>Ulises</span></h3>
+            <h3>I'm <span class="span-anim"></span></h3>
             <p>
                 Por el momento soy Front End Developer, aunque sigo aprendiendo, y mejorando mis Habilidades.
             </p>
