--- a/index.html
+++ b/index.html
@@ -79,6 +79,35 @@
                         lista.</p>
                 </div>
             </div>
+            <div class="project-div">
+                <div class="img-div">
+                    <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
+                            src="./images/countries-app3.png" class="img-project" alt="App Countries"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://ulisesx21.github.io/countries-app/" target="_blank">
+                                <h3 class="titulo-div">App Countries</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/countries-app" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JS</div>
+                        <div>React</div>
+                        <div>API</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Hecho con React Router, Sweet Alert y Font Awesome.</p>
+                </div>
+            </div>
 
         </div>
     </section>
