--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="project-div">
                 <div class="img-div">
                     <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
-                            src="./images/countries-app3.png" class="img-project" alt="App Countries"></a>
+                            src="./images/countries-app.png" class="img-project" alt="App Countries"></a>
                 </div>
                 <div class="description-div">
                     <div class="title-github">
