--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
         <div class="rec-container">
             <h1>Recomendaciones</h1>
             <div class="recomendaciones-div">
-                <img class="rec-img" src="./images/Mark Zuckerberg.jpg">
-                <h3 class="rec-titulo">Mark Zuckerberg</h3>
-                <h5 class="rec-ocup">CEO de Meta</h5>
-                <p class="rec-parrafo">"Lo vi ayudando a una señora a cruzar la calle"</p>
+                <img class="rec-img" src="">
+                <h3 class="rec-titulo"></h3>
+                <h5 class="rec-ocup"></h5>
+                <p class="rec-parrafo"></p>
             </div>
             <div class="container-dot">
                 <div class="dot1"></div>
