--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div>React</div>
                         <div>API</div>
                     </div>
-                    <p>Challenge de Frontend Mentor. Librerias: React Router, Sweet Alert y Font Awesome.</p>
+                    <p>Challenge de Frontend Mentor. Librerias: Axios, React Router, Sweet Alert y Font Awesome.</p>
                 </div>
             </div>
 
