--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="projects">
         <h1>Projects</h1>
         <div class="projects-div">
-            <div class="project-div">
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
                     <a href="https://ulisesx21.github.io/Verbos-Ingles/" target="_blank" class="a1"><img
                             src="./images/App-Ingles.jpg" class="img-project" alt="App Inglés"></a>
@@ -79,7 +79,7 @@
                         lista.</p>
                 </div>
             </div>
-            <div class="project-div">
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
                     <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
                             src="./images/countries-app.png" class="img-project" alt="App Countries"></a>
@@ -135,7 +135,7 @@
         <div class="rec-container">
             <h1>Recomendaciones</h1>
             <div class="recomendaciones-div">
-                <img class="rec-img" src="">
+                <img class="rec-img" src="" data-tilt data-tilt-reverse="true">
                 <h3 class="rec-titulo"></h3>
                 <h5 class="rec-ocup"></h5>
                 <p class="rec-parrafo"></p>
@@ -173,6 +173,7 @@
     </footer>
     <!--JS-->
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.min.js"></script>
 </body>
 
 </html>
