add changeColor to name in contact section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,20 @@
     <!--FOOTER-->
     <footer id="contact">
         <div class="footer-content">
-            <h3>Ulises Huber</h3>
+            <div style="display: flex" id="name-div-container">
+                <div class="name-div">U</div>
+                <div class="name-div">l</div>
+                <div class="name-div">i</div>
+                <div class="name-div">s</div>
+                <div class="name-div">e</div>
+                <div class="name-div">s</div>
+                <div class="name-div-space"></div>
+                <div class="name-div">H</div>
+                <div class="name-div">u</div>
+                <div class="name-div">b</div>
+                <div class="name-div">e</div>
+                <div class="name-div">r</div>
+            </div>
             <ul class="socials">
                 <li><a href="https://github.com/Ulisesx21" target="_blank"><i class=" fab fa-github"></i></i></a></li>
                 <li><a href="https://www.linkedin.com/in/ulises-huber/" target="_blank"><i
