--- a/index.html
+++ b/index.html
@@ -108,6 +108,35 @@
                     <p>Challenge de Frontend Mentor. Librerías: Axios, React Router, Sweet Alert y Font Awesome.</p>
                 </div>
             </div>
+            
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
+                            src="./images/todo-app-img.jpg" class="img-project" alt="App Countries"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://ulisesx21.github.io/todo-app/" target="_blank">
+                                <h3 class="titulo-div">Todo App</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/todo-app" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JS</div>
+                        <div>React</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Aplicacion tipica con: Dark Mode, guardado de Todos, y Dark/Light mode en Local Storage y Drag and Drop.</p>
+                </div>
+            </div>
 
         </div>
     </section>
