--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             
             <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
-                    <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
+                    <a href="https://ulisesx21.github.io/todo-app/" target="_blank" class="a1"><img
                             src="./images/todo-app-img.jpg" class="img-project" alt="App Countries"></a>
                 </div>
                 <div class="description-div">
@@ -123,7 +123,7 @@
                         </div>
                         <div class="description-div-2">
                             <ul>
-                                <li><a href="https://github.com/Ulisesx21/todo-app" target="_blank"><i
+                                <li><a href="https://github.com/Ulisesx21/Portfolio" target="_blank"><i
                                             class=" fab fa-github"></i></i></a></li>
                             </ul>
                         </div>
