--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="description-div-2">
                             <ul>
-                                <li><a href="https://github.com/Ulisesx21/Portfolio" target="_blank"><i
+                                <li><a href="https://github.com/Ulisesx21/todo-app" target="_blank"><i
                                             class=" fab fa-github"></i></i></a></li>
                             </ul>
                         </div>
