--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
                     <a href="https://ulisesx21.github.io/todo-app/" target="_blank" class="a1"><img
-                            src="./images/todo-app-img.jpg" class="img-project" alt="App Countries"></a>
+                            src="./images/todo-app-img.jpg" class="img-project" alt="Todo App"></a>
                 </div>
                 <div class="description-div">
                     <div class="title-github">
