--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div>JS</div>
                         <div>React</div>
                     </div>
-                    <p>Challenge de Frontend Mentor. Aplicación típica con: Dark Mode, guardado de Todos, y Dark/Light mode en Local Storage y Drag and Drop.</p>
+                    <p>Challenge de Frontend Mentor. Aplicación típica con: Drag and Drop, Dark/Light theme, y almacenamiento en LocalStorage.</p>
                 </div>
             </div>
 
