--- a/index.html
+++ b/index.html
@@ -138,6 +138,35 @@
                 </div>
             </div>
 
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://ulisesx21.github.io/Job-listings/" target="_blank" class="a1"><img
+                            src="./images/job-listings.jpg" class="img-project" alt="Job listings"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://ulisesx21.github.io/Job-listings/" target="_blank">
+                                <h3 class="titulo-div">Job listings</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/Job-listings/" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JS</div>
+                        <div>React</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Listado de trabajos con Filtrado Múltiple.</p>
+                </div>
+            </div>
+
         </div>
     </section>
     <hr>
