--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div>React</div>
                         <div>Sass</div>
                     </div>
-                    <p>Challenge de Frontend Mentor. e-commerce que contiene un Modal, Carro de compras, y version Mobile</p>
+                    <p>Challenge de Frontend Mentor. E-commerce que contiene un Modal, Carro de compras, y versión Mobile.</p>
                 </div>
             </div>
 
