--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
             <li>HTML5</li>
             <li>CSS3 / Responsive</li>
             <li>JavaScript / ES6</li>
+            <li>TypeScript</li>
             <li>Bootstrap</li>
             <li>JQuery</li>
             <li>SASS</li>
@@ -216,7 +217,6 @@
             <li>Ingles</li>
         </ul>
     </section>
-    <hr>
 
     <!--UP-BUTTON-->
     <div class="go-top-container">
