--- a/index.html
+++ b/index.html
@@ -197,6 +197,37 @@
                 </div>
             </div>
 
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://interactive-comments-section-gn1u4q1ur-ulisesx21.vercel.app/" target="_blank" class="a1"><img
+                            src="./images/Interactive-comments-section.jpg" class="img-project" alt="Job listings"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://interactive-comments-section-gn1u4q1ur-ulisesx21.vercel.app/" target="_blank">
+                                <h3 class="titulo-div">Interactive comments</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/Interactive-comments-section" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>TS</div>
+                        <div>React</div>
+                        <div>Redux</div>
+                        <div>Sass</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Seccion de comentarios interactivo. Hecho con TypeScript, React, Redux Toolkit, SASS</p>
+                </div>
+            </div>
+
         </div>
     </section>
     <hr>
