--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                         <div>JS</div>
                         <div>React</div>
                         <div>API</div>
+                        <div>Context</div>
                     </div>
                     <p>Challenge de Frontend Mentor. Librerías: Axios, React Router, Sweet Alert y Font Awesome.</p>
                 </div>
@@ -133,6 +134,8 @@
                         <div>CSS</div>
                         <div>JS</div>
                         <div>React</div>
+                        <div>Context</div>
+                        <div>Reducer</div>
                     </div>
                     <p>Challenge de Frontend Mentor. Aplicación típica con: Drag and Drop, Dark/Light theme, y almacenamiento en LocalStorage.</p>
                 </div>
@@ -199,13 +202,13 @@
 
             <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
-                    <a href="https://interactive-comments-section-gn1u4q1ur-ulisesx21.vercel.app/" target="_blank" class="a1"><img
+                    <a href="https://ulisesx21.github.io/Interactive-comments-section/" target="_blank" class="a1"><img
                             src="./images/Interactive-comments-section.jpg" class="img-project" alt="Job listings"></a>
                 </div>
                 <div class="description-div">
                     <div class="title-github">
                         <div class="description-div-1">
-                            <a href="https://interactive-comments-section-gn1u4q1ur-ulisesx21.vercel.app/" target="_blank">
+                            <a href="https://ulisesx21.github.io/Interactive-comments-section/" target="_blank">
                                 <h3 class="titulo-div">Interactive comments</h3>
                             </a>
                         </div>
