--- a/index.html
+++ b/index.html
@@ -49,113 +49,22 @@
     <section id="projects">
         <h1>Projects</h1>
         <div class="projects-div">
-            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
-                <div class="img-div">
-                    <a href="https://ulisesx21.github.io/Verbos-Ingles/" target="_blank" class="a1"><img
-                            src="./images/App-Ingles.jpg" class="img-project" alt="App Inglés"></a>
-                </div>
-                <div class="description-div">
-                    <div class="title-github">
-                        <div class="description-div-1">
-                            <a href="https://ulisesx21.github.io/Verbos-Ingles/" target="_blank">
-                                <h3 class="titulo-div">App Inglés</h3>
-                            </a>
-                        </div>
-                        <div class="description-div-2">
-                            <ul>
-                                <li><a href="https://github.com/Ulisesx21/Verbos-Ingles" target="_blank"><i
-                                            class=" fab fa-github"></i></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="tec">
-                        <div>HTML</div>
-                        <div>CSS</div>
-                        <div>JS</div>
-                        <div>React</div>
-                    </div>
-                    <p>Aplicación para que pongas a prueba tu Inglés. Varias funcionalidades, y opción de crear tu
-                        propia
-                        lista.</p>
-                </div>
-            </div>
-            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
-                <div class="img-div">
-                    <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
-                            src="./images/countries-app.png" class="img-project" alt="App Countries"></a>
-                </div>
-                <div class="description-div">
-                    <div class="title-github">
-                        <div class="description-div-1">
-                            <a href="https://ulisesx21.github.io/countries-app/" target="_blank">
-                                <h3 class="titulo-div">App Countries</h3>
-                            </a>
-                        </div>
-                        <div class="description-div-2">
-                            <ul>
-                                <li><a href="https://github.com/Ulisesx21/countries-app" target="_blank"><i
-                                            class=" fab fa-github"></i></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="tec">
-                        <div>HTML</div>
-                        <div>CSS</div>
-                        <div>JS</div>
-                        <div>React</div>
-                        <div>API</div>
-                        <div>Context</div>
-                    </div>
-                    <p>Challenge de Frontend Mentor. Librerías: Axios, React Router, Sweet Alert y Font Awesome.</p>
-                </div>
-            </div>
-            
-            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
-                <div class="img-div">
-                    <a href="https://ulisesx21.github.io/todo-app/" target="_blank" class="a1"><img
-                            src="./images/todo-app-img.jpg" class="img-project" alt="Todo App"></a>
-                </div>
-                <div class="description-div">
-                    <div class="title-github">
-                        <div class="description-div-1">
-                            <a href="https://ulisesx21.github.io/todo-app/" target="_blank">
-                                <h3 class="titulo-div">Todo App</h3>
-                            </a>
-                        </div>
-                        <div class="description-div-2">
-                            <ul>
-                                <li><a href="https://github.com/Ulisesx21/todo-app" target="_blank"><i
-                                            class=" fab fa-github"></i></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="tec">
-                        <div>HTML</div>
-                        <div>CSS</div>
-                        <div>JS</div>
-                        <div>React</div>
-                        <div>Context</div>
-                        <div>Reducer</div>
-                    </div>
-                    <p>Challenge de Frontend Mentor. Aplicación típica con: Drag and Drop, Dark/Light theme, y almacenamiento en LocalStorage.</p>
-                </div>
-            </div>
 
             <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
-                    <a href="https://ulisesx21.github.io/Job-listings/" target="_blank" class="a1"><img
-                            src="./images/job-listings.jpg" class="img-project" alt="Job listings"></a>
+                    <a href="https://ulisesx21.github.io/Interactive-comments-section/" target="_blank" class="a1"><img
+                            src="./images/Interactive-comments-section.jpg" class="img-project" alt="Job listings"></a>
                 </div>
                 <div class="description-div">
                     <div class="title-github">
                         <div class="description-div-1">
-                            <a href="https://ulisesx21.github.io/Job-listings/" target="_blank">
-                                <h3 class="titulo-div">Job listings</h3>
+                            <a href="https://ulisesx21.github.io/Interactive-comments-section/" target="_blank">
+                                <h3 class="titulo-div">Interactive comments</h3>
                             </a>
                         </div>
                         <div class="description-div-2">
                             <ul>
-                                <li><a href="https://github.com/Ulisesx21/Job-listings/" target="_blank"><i
+                                <li><a href="https://github.com/Ulisesx21/Interactive-comments-section" target="_blank"><i
                                             class=" fab fa-github"></i></i></a></li>
                             </ul>
                         </div>
@@ -163,10 +72,12 @@
                     <div class="tec">
                         <div>HTML</div>
                         <div>CSS</div>
-                        <div>JS</div>
+                        <div>TS</div>
                         <div>React</div>
+                        <div>Redux</div>
+                        <div>Sass</div>
                     </div>
-                    <p>Challenge de Frontend Mentor. Listado de trabajos con Filtrado Múltiple.</p>
+                    <p>Challenge de Frontend Mentor. Seccion de comentarios interactivo. Hecho con TypeScript, React, Redux Toolkit, SASS</p>
                 </div>
             </div>
 
@@ -202,19 +113,19 @@
 
             <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
-                    <a href="https://ulisesx21.github.io/Interactive-comments-section/" target="_blank" class="a1"><img
-                            src="./images/Interactive-comments-section.jpg" class="img-project" alt="Job listings"></a>
+                    <a href="https://ulisesx21.github.io/Job-listings/" target="_blank" class="a1"><img
+                            src="./images/job-listings.jpg" class="img-project" alt="Job listings"></a>
                 </div>
                 <div class="description-div">
                     <div class="title-github">
                         <div class="description-div-1">
-                            <a href="https://ulisesx21.github.io/Interactive-comments-section/" target="_blank">
-                                <h3 class="titulo-div">Interactive comments</h3>
+                            <a href="https://ulisesx21.github.io/Job-listings/" target="_blank">
+                                <h3 class="titulo-div">Job listings</h3>
                             </a>
                         </div>
                         <div class="description-div-2">
                             <ul>
-                                <li><a href="https://github.com/Ulisesx21/Interactive-comments-section" target="_blank"><i
+                                <li><a href="https://github.com/Ulisesx21/Job-listings/" target="_blank"><i
                                             class=" fab fa-github"></i></i></a></li>
                             </ul>
                         </div>
@@ -222,15 +133,106 @@
                     <div class="tec">
                         <div>HTML</div>
                         <div>CSS</div>
-                        <div>TS</div>
+                        <div>JS</div>
                         <div>React</div>
-                        <div>Redux</div>
-                        <div>Sass</div>
                     </div>
-                    <p>Challenge de Frontend Mentor. Seccion de comentarios interactivo. Hecho con TypeScript, React, Redux Toolkit, SASS</p>
+                    <p>Challenge de Frontend Mentor. Listado de trabajos con Filtrado Múltiple.</p>
                 </div>
             </div>
 
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://ulisesx21.github.io/todo-app/" target="_blank" class="a1"><img
+                            src="./images/todo-app-img.jpg" class="img-project" alt="Todo App"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://ulisesx21.github.io/todo-app/" target="_blank">
+                                <h3 class="titulo-div">Todo App</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/todo-app" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JS</div>
+                        <div>React</div>
+                        <div>Context</div>
+                        <div>Reducer</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Aplicación típica con: Drag and Drop, Dark/Light theme, y almacenamiento en LocalStorage.</p>
+                </div>
+            </div>
+
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://ulisesx21.github.io/countries-app/" target="_blank" class="a1"><img
+                            src="./images/countries-app.png" class="img-project" alt="App Countries"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://ulisesx21.github.io/countries-app/" target="_blank">
+                                <h3 class="titulo-div">App Countries</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/countries-app" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JS</div>
+                        <div>React</div>
+                        <div>API</div>
+                        <div>Context</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Librerías: Axios, React Router, Sweet Alert y Font Awesome.</p>
+                </div>
+            </div>
+
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://ulisesx21.github.io/Verbos-Ingles/" target="_blank" class="a1"><img
+                            src="./images/App-Ingles.jpg" class="img-project" alt="App Inglés"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://ulisesx21.github.io/Verbos-Ingles/" target="_blank">
+                                <h3 class="titulo-div">App Inglés</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/Verbos-Ingles" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JS</div>
+                        <div>React</div>
+                    </div>
+                    <p>Aplicación para que pongas a prueba tu Inglés. Varias funcionalidades, y opción de crear tu
+                        propia
+                        lista.</p>
+                </div>
+            </div>
+            
         </div>
     </section>
     <hr>
@@ -242,7 +244,7 @@
             <li>CSS3 / Responsive</li>
             <li>JavaScript / ES6</li>
             <li>TypeScript</li>
-            <li>Bootstrap</li>
+            <li>Material UI</li>
             <li>JQuery</li>
             <li>SASS</li>
             <li>React / Redux</li>
