--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Bienvenidos</h1>
             <h3>I'm <span class="span-anim"></span></h3>
             <p>
-                Por el momento soy Front End Developer, aunque sigo aprendiendo, y mejorando mis Habilidades.
+                Front End Developer, aunque sigo aprendiendo, y mejorando mis Habilidades.
             </p>
         </div>
     </section>
@@ -49,6 +49,35 @@
     <section id="projects">
         <h1>Projects</h1>
         <div class="projects-div">
+
+            <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
+                <div class="img-div">
+                    <a href="https://github-user-search-vert.vercel.app/" target="_blank" class="a1"><img
+                            src="./images/github-user-search.jpg" class="img-project" alt="App Inglés"></a>
+                </div>
+                <div class="description-div">
+                    <div class="title-github">
+                        <div class="description-div-1">
+                            <a href="https://github-user-search-vert.vercel.app/" target="_blank">
+                                <h3 class="titulo-div">Github User Search</h3>
+                            </a>
+                        </div>
+                        <div class="description-div-2">
+                            <ul>
+                                <li><a href="https://github.com/Ulisesx21/github-user-search" target="_blank"><i
+                                            class=" fab fa-github"></i></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tec">
+                        <div>HTML</div>
+                        <div>Tailwind</div>
+                        <div>TS</div>
+                        <div>React</div>
+                    </div>
+                    <p>Challenge de Frontend Mentor. Buscador de perfiles de Github.</p>
+                </div>
+            </div>
 
             <div class="project-div" data-tilt data-tilt-reverse="true" data-tilt-max="10">
                 <div class="img-div">
@@ -77,7 +106,7 @@
                         <div>Redux</div>
                         <div>Sass</div>
                     </div>
-                    <p>Challenge de Frontend Mentor. Seccion de comentarios interactivo. Hecho con TypeScript, React, Redux Toolkit, SASS</p>
+                    <p>Challenge de Frontend Mentor. Seccion de comentarios interactivo. Hecho con TypeScript, React, Redux Toolkit, SASS.</p>
                 </div>
             </div>
 
@@ -244,8 +273,8 @@
             <li>CSS3 / Responsive</li>
             <li>JavaScript / ES6</li>
             <li>TypeScript</li>
-            <li>Material UI</li>
             <li>JQuery</li>
+            <li>Material UI</li>
             <li>SASS</li>
             <li>React / Redux</li>
             <li>Git / GitHub</li>
